--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ matrix:
 before_install:
 - pip install codecov
 install:
-- travis_retry pip install $DJANGO
-- pip install -e .
+- travis_retry pip install $DJANGO -e .
 script:
 - coverage run --source=capture_tag runtests.py
 after_success:
