--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,39 @@
 sudo: false
 language: python
-python:
-- '2.6'
-- '2.7'
-- '3.3'
-- '3.4'
-env:
-- DJANGO="django>=1.6.0,<1.7.0"
-- DJANGO="django>=1.7.0,<1.8.0"
-- DJANGO="django>=1.8.0,<1.9.0"
-- DJANGO="django>=1.9.0,<1.10.0"
 matrix:
-  exclude:
-  - python: '2.6'
-    env: DJANGO="django>=1.7.0,<1.8.0"
-  - python: '2.6'
-    env: DJANGO="django>=1.8.0,<1.9.0"
-  - python: '2.6'
-    env: DJANGO="django>=1.9.0,<1.10.0"
+  include:
+  # Python 2.7
+  - python: '2.7'
+    env: DJANGO="Django>=1.6.0,<1.7.0"
+  - python: '2.7'
+    env: DJANGO="Django>=1.7.0,<1.8.0"
+  - python: '2.7'
+    env: DJANGO="Django>=1.8.0,<1.9.0"
+  - python: '2.7'
+    env: DJANGO="Django>=1.9.0,<1.10.0"
+  - python: '2.7'
+    env: DJANGO="Django>=1.10.0,<1.11.0"
+  - python: '2.7'
+    env: DJANGO="Django>=1.11.0,<2.0"
+  # Python 3.3
   - python: '3.3'
-    env: DJANGO="django>=1.4.0,<1.5.0"
+    env: DJANGO="Django>=1.6.0,<1.7.0"
   - python: '3.3'
-    env: DJANGO="django>=1.9.0,<1.10.0"
+    env: DJANGO="Django>=1.7.0,<1.8.0"
+  # Python 3.5
+  - python: '3.5'
+    env: DJANGO="Django>=1.8.0,<1.9.0"
+  - python: '3.5'
+    env: DJANGO="Django>=1.9.0,<1.10.0"
+  - python: '3.5'
+    env: DJANGO="Django>=1.10.0,<1.11.0"
+  - python: '3.5'
+    env: DJANGO="Django>=2.0,<2.1"
+  # Python 3.6
+  - python: '3.6'
+    env: DJANGO="Django>=1.11.0,<2.0"
+  - python: '3.6'
+    env: DJANGO="Django>=2.0,<2.1"
 before_install:
 - pip install codecov
 install:
