--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,22 @@
 [tox]
 envlist=
-    py27-django{16,17,18,19,110,111},
-    py33-django{16,17}
-    py35-django{18,19,110,111,20},
-    py36-django{111,20}
-    # py33-django-dev,
+    py{38,39,310,311}-dj{32,41,42}-docs,
+    py{38,39,310,311}-dj{32,41,42}-docs,
     coverage,
-    docs,
 
 [testenv]
 deps =
-    django16: Django >= 1.6,<1.7
-    django17: Django >= 1.7,<1.8
-    django18: Django >= 1.8,<1.9
-    django19: Django >= 1.9,<1.10
-    django110: Django >= 1.10,<1.11
-    django111: Django >= 1.11,<2.0
-    django20: Django >= 2.0,<2.1
-    django-dev: https://github.com/django/django/tarball/master
+    dj32: Django~=3.2.0
+    dj41: Django~=4.1.0
+    dj42: Django~=4.2.0
 commands=
+    pip install django
     python runtests.py
 
 [testenv:coverage]
-basepython=python3.3
+basepython=python3.8
 deps=
-    django==1.9.4
+    django~=3.2.0
     coverage
 commands=
     coverage erase
